Added data attribute support. Modified HTML example accordingly

--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Placeholder Images using JS and Canvas</title>
+  <title>placeholder.js</title>
 </head>
 <body>
 
-<img src="img.js/300x340/ada/fff">
-<img src="img.js/300x180/f0f678/000&amp;text=A nice Image">
-<img src="img.js/60x20/f00/fff">
+<img src="img.js/200x200/fa8/c53">
+<img src="img.js/125x200/aa88ff/000&text=Custom text">
+<img data-placeholder="img.js/180x200/f8a&text=Default color">
+<img src="img.js/60x20/5cf/fff">
 
 <script src="placeholder.js"></script>
+
 </body>
 </html>
