--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 
 <img src="img.js/200x200/fa8/c53">
-<img src="img.js/125x200/aa88ff/000&text=Custom text">
+<img data-imgjs="125x200/aa88ff/000&text=Custom text">
 <img data-imgjs="180x200/f8a&text=Default color">
-<img src="img.js/60x20/5cf/fff">
+<img data-imgjs="60x20/5cf/fff">
 
 <script src="placeholder.js"></script>
 
