Added more examples

--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>placeholder.js</title>
+  <title>img.js Placeholders made easy</title>
 </head>
 <body>
 
-<img src="img.js/200x200/fa8/c53">
-<img data-imgjs="125x200/aa88ff/000&text=Custom text">
-<img data-imgjs="180x200/f8a&text=Default color">
+<img src="img.js">
+<img src="img.js/80x200/af8/8af?text=Sample 1">
+
+<img data-imgjs>
+<img data-imgjs="200x200/fa8/c53?text=Hello!">
+<img data-imgjs="125x200/aa88ff/000?text=Custom text">
+<img data-imgjs="180x200/f8a?text=Default color">
 <img data-imgjs="60x20/5cf/fff">
 
-<script src="placeholder.js"></script>
-
+<script src="img.js"></script>
 </body>
 </html>
