Modified HTML examples

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <body>
 
 <img src="img.js">
-<img src="img.js/80x200/af8/8af?text=Sample 1">
+<img src="img.js/80x200/af8/88aaff?text=Sample 1">
 
 <img data-imgjs>
-<img data-imgjs="200x200/fa8/c53?text=Hello!">
+<img data-imgjs="200/fa8/c53?text=Hello!">
 <img data-imgjs="125x200/aa88ff/000?text=Custom text">
-<img data-imgjs="180x200/f8a?text=Default color">
+<img data-imgjs="180x200?text=Default color">
 <img data-imgjs="60x20/5cf/fff">
 
 <script src="img.js"></script>
